--- a/src/assets/style/_utilities.scss
+++ b/src/assets/style/_utilities.scss
@@ -30,9 +30,9 @@
 .box-white-standard{
   background-color: white;
   border-radius: 10px;
-  box-shadow: 0px 10px 10px 0px #888888;
+  box-shadow: 0px 15px 10px 0px rgba($color: #000000, $alpha: 0.2);
 }
 
 .border-top-green{
-  border-top: 3px solid $primary-color;
+  border-top: 4px solid $primary-color;
 }
