--- a/src/assets/style/_utilities.scss
+++ b/src/assets/style/_utilities.scss
@@ -36,3 +36,8 @@
 .border-top-green{
   border-top: 4px solid $primary-color;
 }
+
+.activenav{
+  color: $primary-color;
+  border-bottom: 2px solid $primary-color;
+}
